--- a/.github/workflows/digest.yml
+++ b/.github/workflows/digest.yml
@@ -8,6 +8,7 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   build:
@@ -17,36 +18,72 @@ jobs:
       LANGS: uk,de,fr,es
       DIGEST_MIN_ITEMS: '8'
       OPENAI_MODEL: gpt-4o-mini
+      SITE_ORIGIN: https://presidencyclock.com
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Show repo layout (debug)
+        run: |
+          echo "PWD=$(pwd)"
+          ls -la
+          echo "---- potus-countdown ----"
+          ls -la potus-countdown || true
+          echo "---- scripts ----"
+          ls -la potus-countdown/scripts || true
+          test -f potus-countdown/scripts/generate_digest.py && echo "OK: script exists" || (echo "ERROR: script missing"; exit 1)
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install dependencies (smart fallback)
         run: |
           python -m pip install -U pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          elif [ -f potus-countdown/requirements.txt ]; then
+            pip install -r potus-countdown/requirements.txt
+          else
+            echo "requirements.txt not found -> installing minimal set"
+            pip install feedparser==6.0.11 Jinja2==3.1.4 requests==2.32.3
+          fi
+          python -c "import sys,feedparser,jinja2,requests; print('Deps OK:', sys.version, feedparser.__version__, jinja2.__version__, requests.__version__)"
 
       - name: Generate digests
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          SITE_ORIGIN: https://presidencyclock.com
         run: |
+          set -e
           python potus-countdown/scripts/generate_digest.py
 
+      # Варіант А: прямий пуш (якщо гілка main НЕ захищена)
       - name: Commit & push changes
+        id: push_changes
+        continue-on-error: true
         run: |
           git config user.name "presidencyclock-bot"
           git config user.email "bot@presidencyclock.local"
           git add -A
           if git diff --cached --quiet; then
             echo "No changes to commit."
-          else
-            git commit -m "auto: digests $(date -u +'%Y-%m-%d %H:%M:%S')"
-            git pull --rebase
-            git push
+            exit 0
           fi
+          git commit -m "auto: digests $(date -u +'%Y-%m-%d %H:%M:%S')"
+          git pull --rebase || true
+          git push
+
+      # Варіант Б: якщо пуш заборонений (protected branch) — створюємо PR
+      - name: Create Pull Request if push failed
+        if: steps.push_changes.outcome == 'failure'
+        uses: peter-evans/create-pull-request@v6
+        with:
+          commit-message: "auto: digests $(date -u +'%Y-%m-%d %H:%M:%S')"
+          title: "Auto digests update"
+          body: "This PR was created because direct push to the default branch is restricted."
+          branch: auto/digests-update
+          delete-branch: true
