--- a/.github/workflows/.github/workflows/generate-digests.yml
+++ b/.github/workflows/.github/workflows/generate-digests.yml
@@ -83,3 +83,26 @@ jobs:
           branch: auto/digests-update
           commit-message: "auto: digests"
           delete-branch: false
+name: Bootstrap site
+on:
+  workflow_dispatch: {}
+permissions:
+  contents: write
+jobs:
+  make:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run bootstrap
+        run: |
+          chmod +x bootstrap.sh
+          bash bootstrap.sh
+      - name: Commit generated files
+        run: |
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git add -A
+            git commit -m "bootstrap: generate static site"
+            git push
+          fi
