--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,7 @@
 {
   "rewrites": [
-    { "source": "/uk", "destination": "/?lang=uk" },
-    { "source": "/uk/", "destination": "/?lang=uk" },
-    { "source": "/es", "destination": "/?lang=es" },
-    { "source": "/es/", "destination": "/?lang=es" },
-    { "source": "/fr", "destination": "/?lang=fr" },
-    { "source": "/fr/", "destination": "/?lang=fr" },
-    { "source": "/de", "destination": "/?lang=de" },
-    { "source": "/de/", "destination": "/?lang=de" },
-    { "source": "/it", "destination": "/?lang=it" },
-    { "source": "/it/", "destination": "/?lang=it" },
-    { "source": "/zh", "destination": "/?lang=zh" },
-    { "source": "/zh/", "destination": "/?lang=zh" },
-    { "source": "/ja", "destination": "/?lang=ja" },
-    { "source": "/ja/", "destination": "/?lang=ja" },
-
-    { "source": "/uk/:path*", "destination": "/:path*?lang=uk" },
-    { "source": "/es/:path*", "destination": "/:path*?lang=es" },
-    { "source": "/fr/:path*", "destination": "/:path*?lang=fr" },
-    { "source": "/de/:path*", "destination": "/:path*?lang=de" },
-    { "source": "/it/:path*", "destination": "/:path*?lang=it" },
-    { "source": "/zh/:path*", "destination": "/:path*?lang=zh" },
-    { "source": "/ja/:path*", "destination": "/:path*?lang=ja" }
+    { "source": "/:lang(uk|es|fr|de|it|zh|ja)", "destination": "/?lang=:lang" },
+    { "source": "/:lang(uk|es|fr|de|it|zh|ja)/:path*", "destination": "/:path*?lang=:lang" }
   ],
   "redirects": [
     { "source": "/en", "destination": "/", "permanent": true },
@@ -30,11 +10,11 @@
   "headers": [
     {
       "source": "/(.*)\\.(css|js|jpg|jpeg|png|gif|svg|woff2)",
-      "headers": [ { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" } ]
+      "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
     },
     {
       "source": "/data/(.*)\\.json",
-      "headers": [ { "key": "Cache-Control", "value": "public, max-age=300, stale-while-revalidate=86400" } ]
+      "headers": [{ "key": "Cache-Control", "value": "public, max-age=300, stale-while-revalidate=86400" }]
     },
     {
       "source": "/(.*)",
