--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,23 @@
 {
-  "rewrites": [
-    { "source": "/:lang(uk|es|fr|de|it|zh|ja)", "destination": "/?lang=:lang" },
-    { "source": "/:lang(uk|es|fr|de|it|zh|ja)/", "destination": "/?lang=:lang" },
-    { "source": "/:lang(uk|es|fr|de|it|zh|ja)/:path*", "destination": "/:path*?lang=:lang" }
-  ],
   "redirects": [
     { "source": "/en", "destination": "/", "permanent": true },
     { "source": "/en/:path*", "destination": "/:path*", "permanent": true }
   ],
   "headers": [
     {
-      "source": "/(seo|script|monetization)\\.js",
+      "source": "/:file(seo|script|monetization).js",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
       ]
     },
     {
-      "source": "/(.*)\\.(css|jpg|jpeg|png|gif|svg|webp|woff2)",
+      "source": "/:path*.(css|jpg|jpeg|png|gif|svg|webp|woff2)",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
     },
     {
-      "source": "/data/(.*)\\.json",
+      "source": "/data/:name*.json",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=300, stale-while-revalidate=86400" }
       ]
